argo_mgc/musicgym-api-mgc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicgym-api
  labels:
    app: musicgym-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: musicgym-api
  template:
    metadata:
      labels:
        app: musicgym-api
    spec:
      containers:
        - name: musicgym-api
          image: cbeloni/musicgym-api:amd64
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
