argo_mgc/setlistclub-api-mgc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: setlistclub-api
  labels:
    app: setlistclub-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: setlistclub-api
  template:
    metadata:
      labels:
        app: setlistclub-api
    spec:
      enableServiceLinks: false
      containers:
        - name: setlistclub-api
          image: cbeloni/setlistclub-api:amd64
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
