argo_mgc/setlistclub-api-mgc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: setlistclub-api-svc
spec:
  type: ClusterIP
  selector:
    app: setlistclub-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: setlistclub-api-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: setlistclub-api.201.23.17.249.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: setlistclub-api-svc
                port:
                  number: 80
    - host: setlistclub-api.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: setlistclub-api-svc
                port:
                  number: 80
